--- a/index.html
+++ b/index.html
@@ -1,108 +1,139 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AndroIDE Landing</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Documentation Page</title>
+  <style>
+    /* General Styles */
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #ffffff;
+      color: #333;
+      margin: 0;
+      padding: 0;
+    }
+
+    header {
+      background-color: #f8f9fa;
+      padding: 20px;
+      text-align: center;
+      border-bottom: 1px solid #ddd;
+    }
+
+    header h1 {
+      margin: 0;
+      font-size: 28px;
+    }
+
+    nav {
+      background-color: #f1f1f1;
+      padding: 15px;
+      width: 250px;
+      position: fixed;
+      top: 0;
+      bottom: 0;
+      overflow-y: auto;
+      border-right: 1px solid #ddd;
+    }
+
+    nav ul {
+      list-style: none;
+      padding: 0;
+    }
+
+    nav ul li {
+      margin: 10px 0;
+    }
+
+    nav ul li a {
+      text-decoration: none;
+      color: #333;
+      font-weight: bold;
+      font-size: 16px;
+    }
+
+    nav ul li a:hover {
+      text-decoration: underline;
+    }
+
+    main {
+      margin-left: 270px;
+      padding: 20px;
+    }
+
+    h2 {
+      color: #007bff;
+    }
+
+    p {
+      margin-bottom: 20px;
+      line-height: 1.6;
+    }
+
+    code {
+      background-color: #f8f9fa;
+      padding: 2px 4px;
+      border-radius: 4px;
+      color: #c7254e;
+    }
+
+    footer {
+      text-align: center;
+      padding: 20px;
+      background-color: #f8f9fa;
+      border-top: 1px solid #ddd;
+      margin-top: 40px;
+    }
+  </style>
 </head>
-<body class="min-h-screen bg-gray-900 text-gray-100 flex flex-col">
+<body>
 
-    <!-- Top App Bar -->
-    <header class="bg-purple-700 py-2 px-4 flex items-center justify-between shadow-md">
-        <div class="flex items-center">
-            <button id="menuToggle" class="mr-4 text-white hover:bg-purple-600">
-                <span class="sr-only">Toggle menu</span>
-                <svg class="h-6 w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
-                </svg>
-            </button>
-            <div class="flex items-center">
-                <img src="/placeholder.svg" alt="AndroIDE Logo" class="mr-2" width="40" height="40">
-                <h1 class="text-2xl font-bold">AndroIDE</h1>
-            </div>
-        </div>
-        <nav>
-            <ul class="flex space-x-4">
-                <li><a href="#" class="hover:text-gray-300">Home</a></li>
-                <li><a href="#" class="hover:text-gray-300">Features</a></li>
-                <li><a href="#" class="hover:text-gray-300">Pricing</a></li>
-            </ul>
-        </nav>
-    </header>
+  <header>
+    <h1>Documentation Page</h1>
+  </header>
 
-    <!-- Main Content -->
-    <main class="flex-grow p-6 md:p-12">
-        <div class="max-w-6xl mx-auto">
-            <div class="flex flex-col md:flex-row items-center mb-16">
-                <div class="md:w-1/2 mb-8 md:mb-0">
-                    <h2 class="text-4xl md:text-5xl font-bold mb-6">Develop Android Apps with Ease</h2>
-                    <p class="text-xl mb-8">
-                        AndroIDE is the next-generation integrated development environment for Android app creation. 
-                        Boost your productivity with intelligent code completion, real-time error detection, and 
-                        seamless device integration.
-                    </p>
-                    <div class="flex flex-col sm:flex-row gap-4">
-                        <button class="bg-purple-600 hover:bg-purple-700 text-white px-8 py-3 rounded-full">Get Started</button>
-                        <button class="text-purple-400 border-purple-400 hover:bg-purple-400/10 px-8 py-3 rounded-full">Learn More</button>
-                    </div>
-                </div>
-                <div class="md:w-1/2">
-                    <img src="/placeholder.svg" alt="AndroIDE Screenshot" class="rounded-lg shadow-xl" width="600" height="400">
-                </div>
-            </div>
+  <nav>
+    <ul>
+      <li><a href="#section1">Introduction</a></li>
+      <li><a href="#section2">Getting Started</a></li>
+      <li><a href="#section3">API Reference</a></li>
+      <li><a href="#section4">Examples</a></li>
+      <li><a href="#section5">FAQs</a></li>
+    </ul>
+  </nav>
 
-            <!-- Features Section -->
-            <div class="grid md:grid-cols-3 gap-8 mb-16">
-                <div class="bg-gray-800 p-6 rounded-lg shadow-lg">
-                    <svg class="h-12 w-12 mb-4 text-purple-400" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h18M3 12h18m-7 9h7"></path>
-                    </svg>
-                    <h3 class="text-xl font-semibold mb-2">Smart Code Completion</h3>
-                    <p class="text-gray-400">Intelligent suggestions based on context and your coding patterns.</p>
-                </div>
-                <div class="bg-gray-800 p-6 rounded-lg shadow-lg">
-                    <svg class="h-12 w-12 mb-4 text-purple-400" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h18M3 12h18m-7 9h7"></path>
-                    </svg>
-                    <h3 class="text-xl font-semibold mb-2">Integrated Terminal</h3>
-                    <p class="text-gray-400">Run commands, scripts, and manage your project all within the IDE.</p>
-                </div>
-                <div class="bg-gray-800 p-6 rounded-lg shadow-lg">
-                    <svg class="h-12 w-12 mb-4 text-purple-400" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h18M3 12h18m-7 9h7"></path>
-                    </svg>
-                    <h3 class="text-xl font-semibold mb-2">Device Emulation</h3>
-                    <p class="text-gray-400">Test your apps on various Android devices without leaving the IDE.</p>
-                </div>
-            </div>
+  <main>
+    <section id="section1">
+      <h2>Introduction</h2>
+      <p>This documentation provides an overview of how to use our API and various tools. It is designed to be easy to follow and offers examples to get you started quickly.</p>
+    </section>
 
-            <!-- Screenshots Section -->
-            <div class="mb-16">
-                <h3 class="text-2xl font-bold mb-6">AndroIDE in Action</h3>
-                <div class="grid md:grid-cols-2 gap-8">
-                    <img src="/placeholder.svg" alt="AndroIDE Code Editor" class="rounded-lg shadow-xl" width="500" height="300">
-                    <img src="/placeholder.svg" alt="AndroIDE Device Emulator" class="rounded-lg shadow-xl" width="500" height="300">
-                </div>
-            </div>
+    <section id="section2">
+      <h2>Getting Started</h2>
+      <p>To get started, you'll need to sign up for an API key and follow the installation steps. Here's an example of how to install:</p>
+      <p><code>npm install example-package</code></p>
+    </section>
 
-            <!-- Call to Action -->
-            <div class="bg-gray-800 p-8 rounded-lg shadow-lg text-center">
-                <h3 class="text-2xl font-bold mb-4">Ready to elevate your Android development?</h3>
-                <p class="text-xl mb-6">Join thousands of developers who trust AndroIDE for their projects.</p>
-                <form id="ctaForm" class="flex flex-col sm:flex-row gap-4 justify-center">
-                    <input type="email" placeholder="Enter your email" class="bg-gray-700 text-white border-gray-600 focus:border-purple-400 px-4 py-2">
-                    <button class="bg-purple-600 hover:bg-purple-700 text-white px-8 py-3 rounded-full">Start Free Trial</button>
-                </form>
-            </div>
-        </div>
-    </main>
+    <section id="section3">
+      <h2>API Reference</h2>
+      <p>The following section covers the available endpoints and methods in our API.</p>
+    </section>
 
-    <!-- Footer -->
-    <footer class="bg-gray-800 py-6 px-6 text-center">
-        <p class="text-gray-400">&copy; 2024 AndroIDE. All rights reserved.</p>
-    </footer>
+    <section id="section4">
+      <h2>Examples</h2>
+      <p>Here are some code examples to help you understand how to integrate the API into your projects.</p>
+    </section>
 
-    <script src="script.js"></script>
+    <section id="section5">
+      <h2>FAQs</h2>
+      <p>Have questions? Check out our FAQ section for common issues and solutions.</p>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2024 Documentation Inc. All rights reserved.</p>
+  </footer>
+
 </body>
 </html>
