--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Documentation Page</h1>
   </header>
 
-  <nav>
+  <nav id="sidebar">
     <ul>
       <li><a href="#section1">Introduction</a></li>
       <li><a href="#section2">Getting Started</a></li>
